[package]
name = "get-xoauth2-token"
version = "0.1.0"
authors = ["Cole Mickens <cole.mickens@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
base32 = "0.4.0"
base64 = "0.13.0"
structopt = "0.3.20"
tokio = { version = "0.2.*", features = ["full"] }
xdg = "2.2.0"
yup-oauth2 = "4.1.3"
